bug fix: selected filters broken style

--- a/src/Components/StudyCard/SpotCardsFilter.scss
+++ b/src/Components/StudyCard/SpotCardsFilter.scss
@@ -28,6 +28,7 @@
     }
 
     &--selected {
+      @extend .spot-filter-box__item;
       background-color: #f5f5f5;
       &:hover {
         background-color: #dcdcdc;
